tests/NormalTests/paczka2/big_fuzzy/47589726.err
Error in line 1: XXNe S695 19,9
Error in line 16: XXNe S936 67,8
Error in line 18: VsjxB S936 40,6
Error in line 12: S936 S936 27,7
Error in line 27: tRpRu S370 -4,5
Error in line 24: tRpRu S370 58,4
Error in line 31: VsjxB S695 6,0
Error in line 38: tRpRu S936 3,9
Error in line 44: tRpRu S695 149,4
Error in line 48: S936 S370 75,2
Error in line 52: 5yqDweU9pV1 S370 7,3
Error in line 55: XXNe S370 174,9
Error in line 59: VsjxB S370 61,8
Error in line 63: S936 S695 751,6
Error in line 91: XXNe S695 1,5
Error in line 77: S936 S695 289,1
Error in line 92: X10fpd6B S936 67,7
Error in line 105: tRpRu S370 11,9
Error in line 107: XXNe S370 26,4
Error in line 102: 5yqDweU9pV1 S370 1,0
Error in line 116: l4J4Efsz S936 49,5
Error in line 134: l4J4Efsz S370 84,5
Error in line 135: 5yqDweU9pV1 S695 58,8
Error in line 128: tRpRu S370 5,1
Error in line 152: l4J4Efsz S695 76,8
Error in line 157: tRpRu S370 72,83
Error in line 154: tRpRu S370 79,1
Error in line 162: XXNe A366 5,6
Error in line 163: XXNe S370 54,2
Error in line 174: S936 S370 64,6
Error in line 175: S936 S936 22,8
Error in line 184: XXNe S936 0,2
Error in line 185: XXNe A366 88,3
Error in line 180: 5yqDweU9pV1 S695 78,3
Error in line 183: l4J4Efsz S936 22,0
Error in line 195: XXNe S695 99,9
Error in line 198: l4J4Efsz S695 12,4
Error in line 203: 5yqDweU9pV1 S370 132,4
Error in line 204: 5yqDweU9pV1 A366 77,9
Error in line 219: VsjxB A366 77,1
Error in line 222: X10fpd6B S370 677,8
Error in line 231: XXNe S695 97,6
Error in line 235: XXNe S936 45,5
Error in line 230: X10fpd6B S695 21,9
Error in line 242: X10fpd6B S936 50,8
